--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.3.0",
+    "@types/lodash": "^4.14.175",
+    "@use-gesture/react": "^10.0.3",
     "axios": "^0.22.0",
+    "framer": "^1.3.6",
+    "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-swipeable": "^6.2.0",
+    "react-tinder-card": "^1.4.3",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
